ECOPROJECT-3814 | feat: sizer, add smt(simultanious multithreading) to calculation
